Added dishes to index page

--- a/app/views/dishes/index.html.erb
+++ b/app/views/dishes/index.html.erb
@@ -2,6 +2,10 @@
 
 <ul>
 <% @dishes.each do |dish| %>
+<div class='mt-5'>
 <li><%= dish.name %></li>
+<li><%= dish.country %></li>
+<li><%= dish.description %></li>
+</div>
 <% end %>
 </ul>
