--- a/app/views/dishes/index.html.erb
+++ b/app/views/dishes/index.html.erb
@@ -1,11 +1,30 @@
 <h1>Hi, this is our dishes index!</h1>
 
-<ul>
-<% @dishes.each do |dish| %>
-<div class='mt-5'>
-<li><%= dish.name %></li>
-<li><%= dish.country %></li>
-<li><%= dish.description %></li>
+
+<div data-controller="search-dishes">
+  <%= form_with url: dishes_path, method: :get, html: { class:
+    'mb-4 mt-4', data: { search_dishes_target: 'form' } } do |f| %>
+
+<%= f.text_field :query, class: "form-control", placeholder:
+                     'Type a country', value: params[:query],
+                     data: {
+                        search_movies_target: 'input',
+                        action: 'keyup->search-dishes#update'
+                      } %>
+
+<div data-controller='dish-card'>
+  <i class="caret-down" data-action="click->dish-card#revealContent"></i>
+  <p class='d-none' data-dish-card-target='content'>
+    <ul>
+      <% @dishes.each do |dish| %>
+      <div class='mt-5'>
+      <li><%= dish.name %></li>
+      <li><%= dish.country %></li>
+      <li><%= dish.description %></li>
+      </div>
+      <% end %>
+    </ul>
+  </p>
 </div>
+
 <% end %>
-</ul>
