--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,3 +1,7 @@
+<h1>Restaurants Index</h1>
+
+
+<!-- DONT KNOW WHAT THAT IS
 <%= simple_form_for :city, url: root_path, method: :get, html: { class: 'form-inline' } do |f| %>
   <% if @city.nil? %>
     <%= f.input :city, include_blank: true, required: false, input_html: {value: ""} %>
@@ -6,3 +10,4 @@
   <% end %>
   <span class=''><%= f.submit %></span>
 <% end %>
+-->
