added restaurant routes, and index action and more seeds

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,6 +1,7 @@
 <h1>Restaurants Index</h1>
 
-
+<%= @restaurants[0].name %>
+<%= @restaurants[0].address %>
 <!-- DONT KNOW WHAT THAT IS
 <%= simple_form_for :city, url: root_path, method: :get, html: { class: 'form-inline' } do |f| %>
   <% if @city.nil? %>
