--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,7 +1,14 @@
 <h1>Restaurants Index</h1>
 
+<%= simple_form_for(@restaurants) do |f| %>
+  <%= f.input :name %>
+  <%= f.button :submit %>
+<% end %>
+
 <%= @restaurants[0].name %>
 <%= @restaurants[0].address %>
+
+
 <!-- DONT KNOW WHAT THAT IS
 <%= simple_form_for :city, url: root_path, method: :get, html: { class: 'form-inline' } do |f| %>
   <% if @city.nil? %>
