just added margin on dish name in modal, that is all

--- a/app/views/dishes/_dish_modal.html.erb
+++ b/app/views/dishes/_dish_modal.html.erb
@@ -4,7 +4,7 @@
   <div class="modal-dialog border border-0 border-rounded-3">
     <div class="modal-content modalfordish">
       <div class="modal-header">
-        <h2 class="modal-title font-weight-bold" id="dishModalLabel"><%= dish.name %></h5>
+        <h2 class="modal-title font-weight-bold mx-4" id="dishModalLabel"><%= dish.name %></h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
