added banner NOT ready to merge yet

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,5 +1,6 @@
 <h1>Restaurants Index</h1>
 
+<!-- EXPERIMENT
 <%= simple_form_for(@restaurants) do |f| %>
   <%= f.input :name %>
   <%= f.button :submit %>
@@ -7,9 +8,9 @@
 
 <%= @restaurants[0].name %>
 <%= @restaurants[0].address %>
+-->
 
 
-<!-- DONT KNOW WHAT THAT IS
 <%= simple_form_for :city, url: root_path, method: :get, html: { class: 'form-inline' } do |f| %>
   <% if @city.nil? %>
     <%= f.input :city, include_blank: true, required: false, input_html: {value: ""} %>
@@ -18,4 +19,4 @@
   <% end %>
   <span class=''><%= f.submit %></span>
 <% end %>
--->
+
