--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,10 @@
   </head>
 
   <body>
-    <%= render 'shared/navbar' %>
+    <%= render 'shared/banner' %>
     <%= render 'shared/flashes' %>
 
     <%= yield %>
+
   </body>
 </html>
