added cards and crazy animation for Dan

--- a/app/views/dishes/_list.html.erb
+++ b/app/views/dishes/_list.html.erb
@@ -1,9 +1,9 @@
 <div data-search-dishes-target="list">
-  <div class="dishes">
+  <div class="dishes container d-flex flex-wrap justify-content-between">
     <% dishes.each_with_index do |dish, index| %>
-      <a data-bs-toggle="modal" data-bs-target="#dishModal<%= index %>">
-      <%= render 'dish_infos', dish: dish %>
-      </a>
+        <a data-bs-toggle="modal" data-bs-target="#dishModal<%= index %>">
+        <%= render 'dish_infos', dish: dish %>
+        </a>
       <%= render 'dish_modal', dish: dish, index: index %>
     <% end %>
   </div>
