--- a/app/views/dishes/_dish_infos.html.erb
+++ b/app/views/dishes/_dish_infos.html.erb
@@ -1,10 +1,16 @@
 <div class="dish-card" data-controller="edit-dish" data-edit-dish-target="card">
-
-  <div class="dish-infos mt-4 <%= 'd-none' if dish.errors.any? %>" data-edit-dish-target="infos">
-    <h2 title="<%= dish.name %> (<%= dish.country %>)">
-      <%= dish.name %><small> (<%= dish.country %>)</small>
-    </h2>
-    <p> <%= dish.country %></p>
-    <p> <%= dish.description %></p>
+  <div class="row">
+    <div class="card mb-3 cards-for-dishes" style="max-width: 300px;">
+      <div class="row no-gutters">
+        <div class="col-6">
+          <img class="image-for-card" src="https://images.unsplash.com/photo-1625485617425-4eb8ed7d82d4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=735&q=80" class="card-img" alt="food!">
+        </div>
+        <div class="col-6">
+          <div class="card-body">
+            <p class="card-title"><%= dish.name %></p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
