--- a/app/views/dishes/_dish_modal.html.erb
+++ b/app/views/dishes/_dish_modal.html.erb
@@ -1,6 +1,6 @@
 <!-- Modal -->
 
-<div class="modal fade" id="dishModal<%= index %>" tabindex="-1" aria-labelledby="dishModalLabel" aria-hidden="true">
+<div class="modal animate__animated animate__fadeIn animate__faster" id="dishModal<%= index %>" tabindex="-1" aria-labelledby="dishModalLabel" aria-hidden="true">
   <div class="modal-dialog border border-0 border-rounded-3">
     <div class="modal-content modalfordish">
       <div class="modal-header">
