added system wide colours and font, made the navbar/banner work

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,10 +1,13 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #FD1015;
-$blue: #0D6EFD;
-$yellow: #FFC65A;
-$orange: #E67E22;
-$green: #1EDD88;
-$gray: #0E0000;
-$light-gray: #F4F4F4;
+$beige:  #FB8B244D;
+$orange: #E36414;
+$white: #FDFBFD;
+$purple: #031037;
+$blue: #50AEC7;
+$green: #1CC574;
+$light-gray: #F8F8F8D9;
+$gray: #DDDDDD;
+$yellow: #FB8B24;
+$red: #9A031E;
