--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,4 +1,5 @@
 <div class="banner-container">
+    
     <div class="banner-head">
         <form>
             <input type="text" id="banner-dish" value="Dish">
@@ -9,6 +10,8 @@
         Did you know, that in most citys, there might be someone who makes your favourit dish, just the way you love it?
     </div>
     <div class="banner-picture">
-        <img src="images/ramen_200.jpg">
+        <%= link_to "/", class: "banner-picture-img" do %>
+            <%= image_tag "ramen_200.png" %>
+        <% end %>
     </div>
 </div>
