--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -2,13 +2,29 @@
     position: relative;
     display: block;
     width: 100vw;
-    height: 300px;
+    height: 290px;
     background-color: $orange;
     border-radius: 0 0 60% 60% / 0 0 80% 80%;
-    padding-top: 30px;
+    padding-top: 0px;
 }
 
-/* HEADLINE with the two text inputs */
+/* NAVIGATION */
+.navbar {
+    background-color: $orange;
+}
+.banner-logo img {
+    width: 40px;
+}
+.banner-link {
+    padding-top: 0.3125rem;
+    padding-bottom: 0.3125rem;
+    margin-right: 1rem;
+    font-size: 1.25rem;
+    text-decoration: none;
+    white-space: nowrap;
+}
+
+/* HEADLINE with the two text inputs  */
 .banner-head {
     margin: 0 auto;
 	width: max-content;
