removed connect method

--- a/app/views/dishes/index.html.erb
+++ b/app/views/dishes/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col">
       <div class="col-xs-12 col-sm-8 offset-sm-2">
-        <h2 class="my-3 d-flex justify-content-center animate__animated animate__wobble animate__faster animate__infinite"> Dishes</h2>
+        <h2 class="my-3 d-flex justify-content-center"> Dishes</h2>
 
         <div data-controller="search-dishes">
           <div class="my-3 d-flex justify-content-center">
