--- a/app/views/dishes/index.html.erb
+++ b/app/views/dishes/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container home-page">
   <div class="row">
     <div class="col">
       <div class="col-xs-12 col-sm-8 offset-sm-2">
