made card sizes bigger

--- a/app/views/dishes/_list.html.erb
+++ b/app/views/dishes/_list.html.erb
@@ -1,5 +1,5 @@
 <div data-search-dishes-target="list">
-  <div class="dishes container d-flex flex-wrap justify-content-between">
+  <div class="d-flex flex-row flex-wrap justify-content-around">
     <% dishes.each_with_index do |dish, index| %>
         <a data-bs-toggle="modal" data-bs-target="#dishModal<%= index %>">
         <%= render 'dish_infos', dish: dish %>
