added banner on dish, restaurant; made banner smaller WAITING for implementation of AJAX

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -2,7 +2,7 @@
     position: relative;
     display: block;
     width: 100vw;
-    height: 290px;
+    height: 150px;
     background-color: $orange;
     border-radius: 0 0 60% 60% / 0 0 80% 80%;
     padding-top: 0px;
@@ -29,7 +29,7 @@
     margin: 0 auto;
 	width: max-content;
 }
-#banner-dish {
+.banner-dish {
     border: none;
     color: $purple;
     background-color: $orange;
@@ -37,12 +37,12 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-style: normal;
     font-weight: 600;
-    font-size: 32px;
-    line-height: 55px;
+    font-size: 28px;
+    line-height: 35px;
     text-align: right;
-    border-bottom: 2px solid $purple;
+    margin-right: 5px;
 }
-#banner-country {
+.banner-country {
     border: none;
     color: $white;
     background-color: $orange;
@@ -50,9 +50,9 @@
     font-family: 'Red Hat Display', sans-serif;
     font-style: normal;
     font-weight: 600;
-    font-size: 32px;
-    line-height: 55px;
-    border-bottom: 2px solid $purple;
+    font-size: 28px;
+    line-height: 35px;
+    margin-left: 5px;
 }
 
 /* SUB-HEADLINE the text below the entry fields */
@@ -60,11 +60,11 @@
     color: $white;
     margin: auto;
     width: 50%;
-    padding-top: 20px;
+    padding-top: 5px;
     font-family: 'Red Hat Display', sans-serif;
     font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
+    font-weight: lighter;
+    font-size: 12px;
     line-height: 26px;
     text-align: center;
 }
@@ -72,14 +72,15 @@
 /* PICTURE centred, floating */
 .banner-picture {
     position: absolute;
-	width: 150px;
-	height: 150px;
+	
 	
 	left: 50%;
 	bottom: 7%;
 	transform: translate(-50%, 50%);
     border-radius: 90% 90% 90% 90%;
 }
-.banner-picture-img {
+.banner-picture-img img {
     border-radius: 50%;
+    width: 150px;
+    height: 150px;
 }
