--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,7 +1,7 @@
 .cards-for-dishes {
   border-radius: 20px;
   padding: 5px;
-  background-color: rgb(254, 220, 189);
+  background-color: #FB8B244D;
   cursor: pointer;
 }
 
