--- a/app/views/dishes/index.html.erb
+++ b/app/views/dishes/index.html.erb
@@ -1,3 +1,27 @@
+<div class="banner-container">
+    <!-- DISHES -->
+    <!--  HEADLINE with the two text inputs -->
+    <div class="banner-head">
+        <form>
+            <input type="text" class="banner-dish" value="Dish">
+            <input type="text" class="banner-country" value="Country">
+        </form>
+    </div>
+
+    <!-- SUB-HEADLINE the text below the entry fields -->
+    <div class="banner-text">
+        Did you know, that in most citys, there might be someone who makes your favourit dish, just the way you love it?
+    </div>
+
+    <!-- PICTURE centred, floating -->
+    <div class="banner-picture">
+        <%= link_to "/", class: "banner-picture-img" do %>
+            <%= image_tag "ramen_200.png" %>
+        <% end %>
+    </div>
+</div>
+
+
 <div class="container">
   <div class="row">
     <div class="col">
@@ -15,3 +39,4 @@
     </div>
   </div>
 </div>
+ 
