--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,4 +1,4 @@
-<!-- NAVIGATION -->
+<!-- NAVIGATION I know its called banner, but it is the navigation -->
     <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
             <%= link_to "/", class: "banner-logo" do %>
@@ -24,26 +24,3 @@
             </div>
         </div>
     </nav>
-
-<div class="banner-container">
-
-    <!--  HEADLINE with the two text inputs -->
-    <div class="banner-head">
-        <form>
-            <input type="text" id="banner-dish" value="Dish">
-            <input type="text" id="banner-country" value="Country">
-        </form>
-    </div>
-
-    <!-- SUB-HEADLINE the text below the entry fields -->
-    <div class="banner-text">
-        Did you know, that in most citys, there might be someone who makes your favourit dish, just the way you love it?
-    </div>
-
-    <!-- PICTURE centred, floating -->
-    <div class="banner-picture">
-        <%= link_to "/", class: "banner-picture-img" do %>
-            <%= image_tag "ramen_200.png" %>
-        <% end %>
-    </div>
-</div>
