dish popup styled

--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -1,5 +1,31 @@
+
+
 .modalfordish {
-  background-color: rgba(255,255,255, 0.85);
+  background-color: $pop-background;
   border-radius: 20px;
   border-style: none;
+  color: $text-color;
+  box-shadow: $shadow;
+  border: none;
+  min-width: 800px;
+}
+.modal-backdrop
+{
+    opacity:0.15 !important;
+}
+
+.modal-footer {
+  border: none !important;
+}
+
+.modal-header {
+  border: none !important;
+}
+
+.modal-title {
+  margin: 5px;
+
+  p {
+    margin-left: 25px;
+  }
 }
