--- a/app/views/dishes/_dish_modal.html.erb
+++ b/app/views/dishes/_dish_modal.html.erb
@@ -4,14 +4,15 @@
   <div class="modal-dialog border border-0 border-rounded-3">
     <div class="modal-content modalfordish">
       <div class="modal-header">
-        <h2 class="modal-title font-weight-bold mx-4" id="dishModalLabel"><%= dish.name %></h5>
+      <div class="modal-title">
+        <h2 class="font-weight-bold mx-4" id="dishModalLabel"><%= dish.name %></h2>
+        <p><%= dish.country %></p>
+      </div>
+
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
         <ul>
-          <strong>Country of origin:</strong>
-          <p><%= dish.country %></p>
-          <strong>Description:</strong>
           <li class='list-unstyled'> <%= dish.description %> </li>
         </ul>
       </div>
