--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -11,3 +11,6 @@ $light-gray: #F8F8F8D9;
 $gray: #DDDDDD;
 $yellow: #FB8B24;
 $red: #9A031E;
+$text-color: #031037;
+$pop-background: rgba(255, 254, 254, 0.95);
+$shadow: 1px 1px 6px 1px rgb(143, 141, 141);
