--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -19,3 +19,13 @@
 .dishes {
   max-width: 1500px;
 }
+
+.cards-for-restaurants {
+  border-radius: 20px;
+  padding: 5px;
+  background-color: rgb(254, 220, 189);
+}
+
+.restaurant-card {
+  width: 400px;
+}
