bigger cards, yay!

--- a/app/views/dishes/index.html.erb
+++ b/app/views/dishes/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container home-page">
   <div class="row">
     <div class="col">
-      <div class="col-xs-12 col-sm-8 offset-sm-2">
+      <div>
         <h2 class="my-3 d-flex justify-content-center"> Dishes</h2>
 
         <div data-controller="search-dishes">
