--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -11,7 +11,7 @@
 }
 .modal-backdrop
 {
-    opacity:0.15 !important;
+  opacity:0.15 !important;
 }
 
 .modal-footer {
@@ -20,12 +20,35 @@
 
 .modal-header {
   border: none !important;
+  padding: 5px;
 }
 
 .modal-title {
   margin: 5px;
 
+  h2 {
+    margin-top: 5px;
+    margin-bottom: 3px;
+  }
+
   p {
     margin-left: 25px;
+    margin-bottom: 5px;
   }
+
+}
+
+.modal-body {
+  margin-left: 25px;
+  text-decoration: none;
+  padding: 5px !important;
+
+  img {
+    max-height: 300px;
+    margin-bottom: 15px;
+    object-fit: cover;
+    min-width: 720px;
+  }
+
+
 }
