images are now variable and text in popup is alinged

--- a/app/views/dishes/_dish_modal.html.erb
+++ b/app/views/dishes/_dish_modal.html.erb
@@ -10,7 +10,7 @@
       </div>
       </div>
       <div class="modal-body">
-        <img src="https://www.gutekueche.at/storage/media/recipe/27367/conv/spagetti-bolognese-default.jpg" alt=<%= dish.name %>>
+        <img src=<%= dish.image_url %> alt=<%= dish.name %>>
         <p> <%= dish.description %> </p>
 
       </div>
