--- a/app/views/dishes/_dish_modal.html.erb
+++ b/app/views/dishes/_dish_modal.html.erb
@@ -11,7 +11,9 @@
       </div>
       <div class="modal-body">
         <img src=<%= dish.image_url %> alt=<%= dish.name %>>
-        <p> <%= dish.description %> </p>
+        <div class="description">
+          <p> <%= dish.description %> </p>
+        </div>
 
       </div>
       <div class="modal-footer">
