design corrections: title in nav bar, link in navbar, logo bigger

--- a/app/views/dishes/index.html.erb
+++ b/app/views/dishes/index.html.erb
@@ -4,7 +4,7 @@
       <!--  HEADLINE with the two text inputs -->
     <div class="banner-head d-flex">
 
-        <p class="banner-dish">Dish</p>
+        <p class="banner-dish">DishList</p>
 
         <%= form_with url: root_path, method: :get, html: { class: 'sebis', data: {search_dishes_target: 'form' } }  do |f| %>
           <%= f.text_field :query, placeholder: 'type a country', value: params[:query], class: 'banner-country', data: { search_dishes_target: 'input', action: 'keyup->search-dishes#update' } %>
