--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -3,17 +3,17 @@
     display: block;
     width: 100vw;
     height: 150px;
-    background-color: $orange;
+    background-color: $nav-background;
     border-radius: 0 0 60% 60% / 0 0 80% 80%;
     padding-top: 0px;
 }
 
 /* NAVIGATION */
 .navbar {
-    background-color: $orange;
+    background-color: $nav-background;
 }
 .banner-logo img {
-    width: 40px;
+    width: 50px;
 }
 .banner-link {
     padding-top: 0.3125rem;
@@ -22,6 +22,7 @@
     font-size: 1.25rem;
     text-decoration: none;
     white-space: nowrap;
+
 }
 
 /* HEADLINE with the two text inputs  */
@@ -36,26 +37,27 @@
 .banner-dish {
     border: none;
     color: $purple;
-    background-color: $orange;
+    background-color: $nav-background;
     outline: none;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-style: normal;
     font-weight: 600;
-    font-size: 32px;
-    line-height: 35px;
+    font-size: 40px;
+    line-height: 55px;
     text-align: right;
     margin-right: 5px;
+    transform: translate(-10%, 0%);
 }
 .banner-country {
     border: none;
     color: $white;
-    background-color: $orange;
+    background-color: $nav-background;
     outline: none;
     font-family: 'Red Hat Display', sans-serif;
     font-style: normal;
     font-weight: 600;
-    font-size: 32px;
-    line-height: 35px;
+    font-size: 40px;
+    line-height: 30px;
     margin-left: 5px;
 }
 
@@ -69,19 +71,17 @@
     font-style: normal;
     font-weight: lighter;
     font-size: 12px;
-    line-height: 26px;
+    line-height: 5px;
     text-align: center;
 }
 
 /* PICTURE centred, floating */
 .banner-picture {
-    position: absolute;
-	
-	
+  position: absolute;
 	left: 50%;
-	bottom: 7%;
+	bottom: 2%;
 	transform: translate(-50%, 50%);
-    border-radius: 90% 90% 90% 90%;
+  border-radius: 90% 90% 90% 90%;
 }
 .banner-picture-img img {
     border-radius: 50%;
