--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,8 +1,10 @@
 .cards-for-dishes {
   border-radius: 5px;
   padding: 5px;
-  background-color: #FB8B244D;
+  background-color: $cards-background;
   cursor: pointer;
+  border: none;
+  box-shadow: $shadow;
 }
 
 .image-for-card {
@@ -24,7 +26,7 @@
 .cards-for-restaurants {
   border-radius: 5px;
   padding: 5px;
-  background-color: rgb(254, 220, 189);
+  background-color: $cards-background;
 }
 
 .restaurant-card {
@@ -32,5 +34,5 @@
 }
 
 .d-flex {
-  margin-top: 70px;
+  margin-top: 80px;
 }
