updated mini designs changes

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -16,4 +16,4 @@ $pop-background: rgba(255, 254, 254, 0.95);
 $shadow: 1px 1px 6px 1px rgb(143, 141, 141);
 $black: black;
 $nav-background: rgb(70, 143, 70);
-$cards-background: white;
+$cards-background: rgb(255, 255, 255)
