--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -6,6 +6,7 @@
     background-color: $orange;
     border-radius: 0 0 60% 60% / 0 0 80% 80%;
     padding-top: 0px;
+    margin-bottom: 5%;
 }
 
 /* NAVIGATION */
@@ -48,7 +49,7 @@
 }
 .banner-country {
     border: none;
-    color: $white;
+    color: $white; 
     background-color: $orange;
     outline: none;
     font-family: 'Red Hat Display', sans-serif;
