--- a/app/views/dishes/index.html.erb
+++ b/app/views/dishes/index.html.erb
@@ -14,7 +14,7 @@
 
       <!-- SUB-HEADLINE the text below the entry fields -->
     <div class="banner-text">
-      Did you know, that in most citys, there might be someone who makes your favourit dish, just the way you love it?
+      Did you know, that in most citys, there might be someone who makes your favourite dish, just the way you love it?
     </div>
 
       <!-- PICTURE centred, floating -->
@@ -29,7 +29,6 @@
     <div class="row">
       <div class="col">
         <div class="col-xs-12 col-sm-8 offset-sm-2">
-
           <%= render 'list', dishes: @dishes %>
         </div>
       </div>
