--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -20,6 +20,11 @@
       </div>
   </div>
 
+  <% if @restaurants.empty? %>
+  <div class='d-flex justify-content-around'>
+    <%= link_to "There are no restaurants that make #{params[:dish]} nearby, want to add one?", dishes_path, class: "btn btn-link" %>
+  </div>
+  <% else %>
   <div class="container">
     <div class="row">
       <div class="col">
@@ -36,4 +41,5 @@
       </div>
     </div>
   </div>
+  <% end %>
 </div>
