some little touch ups

--- a/app/views/dishes/index.html.erb
+++ b/app/views/dishes/index.html.erb
@@ -21,7 +21,12 @@
         <%= image_tag "ramen_200.png", data: { search_dishes_target: 'img' } %>
       <% end %>
     </div>
+    <div class="banner-sub">
+      Our Picks
+    </div>
   </div>
+
+
   
   <!-- Rendered Dish-List -->
   <div class="container">
