--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -3,7 +3,7 @@
     <!-- RESTAURANT -->
       <!--  HEADLINE with the two text inputs -->
       <div class="banner-head d-flex">
-              <input type="text" class="banner-dish sebis" id="tonys" value="Dish">
+              <input type="text" class="banner-dish sebis" id="tonys" value="<%=params[:dish]%>">
               <input type="text" class="banner-country sebis" value="Location">
       </div>
 
@@ -15,7 +15,7 @@
       <!-- PICTURE centred, floating -->
       <div class="banner-picture">
           <%= link_to "/", class: "banner-picture-img" do %>
-              <%= image_tag "ramen_200.png" %>
+              <%= image_tag "#{params[:dish_picture]}" %>
           <% end %>
       </div>
   </div>
