created new class for form in restaurants input

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -48,7 +48,7 @@
 
 
 
-<form action="/restaurants">
+<form class="dan_input"action="/restaurants">
   <input name="location" type="text">
   <%= hidden_field_tag :dish, params[:dish] %>
   <%= hidden_field_tag :dish_picture, params[:dish_picture] %>
