input field on restaurants done still missing auto complet

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -5,7 +5,12 @@
       <div class="banner-head d-flex">
 
           <input type="text" class="banner-dish sebis" id="tonys" value="<%= params[:dish].present? ? "#{params[:dish]}" : 'Dish' %>">
-          <input type="text" class="banner-country sebis" value="Location">
+          <form  action="/restaurants">
+            <input id="dan_input" name="location" type="text" value="<%= params[:location].present? ? "#{params[:location]}" : 'Location' %>">
+            <%= hidden_field_tag :dish, params[:dish] %>
+            <%= hidden_field_tag :dish_picture, params[:dish_picture] %>
+            <button hidden type="submit">Search</button>
+          </form>
 
       </div>
 
@@ -50,12 +55,3 @@
   </div>
   <% end %>
 </div>
-
-
-
-<form class="dan_input"action="/restaurants">
-  <input name="location" type="text">
-  <%= hidden_field_tag :dish, params[:dish] %>
-  <%= hidden_field_tag :dish_picture, params[:dish_picture] %>
-  <button type="submit">Search</button>
-</form>
