--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -102,6 +102,10 @@
   max-width: 100%;
 }
 
+.restaurant-banner-margin {
+  margin-left: 80px;
+}
+
 #dan_input {
   border-style: hidden;
   color: #FDFBFD;
