--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -2,7 +2,7 @@
   <div class="banner-container restaurants-banner">
     <!-- RESTAURANT -->
       <!--  HEADLINE with the two text inputs -->
-      <div class="banner-head d-flex">
+      <div class="banner-head restaurant-banner-margin d-flex">
 
           <input type="text" class="banner-dish sebis" id="tonys" value="<%= params[:dish].present? ? "#{params[:dish]}" : 'Dish' %>">
           <form  action="/restaurants">
