fixed seeds and joint table again

--- a/app/views/dishes/_dish_modal.html.erb
+++ b/app/views/dishes/_dish_modal.html.erb
@@ -6,6 +6,7 @@
       <div class="modal-title">
         <h2 class="font-weight-bold mx-4" id="dishModalLabel"><%= dish.name %></h2>
         <p><%= dish.country %></p>
+        <p><%= @tags %></p>
       </div>
       </div>
       <div class="modal-body">
