--- a/app/views/dishes/index.html.erb
+++ b/app/views/dishes/index.html.erb
@@ -26,7 +26,8 @@
     </div>
   </div>
 
-
+  <%= @tags[0].dish.name  %>
+  <%= @countries[0] %>
 
   <!-- Rendered Dish-List -->
   <div class="container">
