--- a/app/views/dishes/_list.html.erb
+++ b/app/views/dishes/_list.html.erb
@@ -1,6 +1,7 @@
 <div data-search-dishes-target="list">
   <div class="d-flex flex-row flex-wrap justify-content-around">
     <% dishes.each_with_index do |dish, index| %>
+        <% @myid = dish.id %>
         <a data-bs-toggle="modal" data-bs-target="#dishModal<%= index %>">
         <%= render 'dish_infos', dish: dish %>
         </a>
